--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@tsconfig/node14": "^1.0.3",
+    "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
@@ -128,5 +129,9 @@
       "**/test/**/*.[jt]s?(x)",
       "**/?(*.)+(spec|test).[jt]s?(x)"
     ]
+  },
+  "dependencies": {
+    "commander": "^9.4.1",
+    "fs-extra": "^10.1.0"
   }
 }
