--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
+    "@types/shelljs": "^0.8.11",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "commitizen": "^4.2.5",
@@ -132,6 +133,7 @@
   },
   "dependencies": {
     "commander": "^9.4.1",
-    "fs-extra": "^10.1.0"
+    "fs-extra": "^10.1.0",
+    "shelljs": "^0.8.5"
   }
 }
