--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     ]
   },
   "dependencies": {
+    "axios": "^1.1.3",
     "commander": "^9.4.1",
     "fs-extra": "^10.1.0",
     "shelljs": "^0.8.5"
