--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@commitlint/cli": "^17.2.0",
     "@commitlint/config-conventional": "^17.2.0",
     "@tsconfig/node14": "^1.0.3",
+    "@types/decompress": "^4.2.4",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
+    "@types/rimraf": "^3.0.2",
     "@types/shelljs": "^0.8.11",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
@@ -134,7 +136,9 @@
   "dependencies": {
     "axios": "^1.1.3",
     "commander": "^9.4.1",
+    "decompress": "^4.2.1",
     "fs-extra": "^10.1.0",
+    "rimraf": "^3.0.2",
     "shelljs": "^0.8.5"
   }
 }
