--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/node": "^18.11.9",
     "@types/rimraf": "^3.0.2",
     "@types/shelljs": "^0.8.11",
+    "@types/text-table": "^0.2.2",
     "@typescript-eslint/eslint-plugin": "^5.42.0",
     "@typescript-eslint/parser": "^5.42.0",
     "commitizen": "^4.2.5",
@@ -135,10 +136,12 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "chalk": "^4.1.2",
     "commander": "^9.4.1",
     "decompress": "^4.2.1",
     "fs-extra": "^10.1.0",
     "rimraf": "^3.0.2",
-    "shelljs": "^0.8.5"
+    "shelljs": "^0.8.5",
+    "text-table": "^0.2.0"
   }
 }
