--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
+    "@types/npm-package-arg": "^6.1.1",
     "@types/rimraf": "^3.0.2",
     "@types/shelljs": "^0.8.11",
     "@types/text-table": "^0.2.2",
@@ -140,6 +141,7 @@
     "commander": "^9.4.1",
     "decompress": "^4.2.1",
     "fs-extra": "^10.1.0",
+    "npm-package-arg": "^10.0.0",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
     "text-table": "^0.2.0"
