--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "types": ["jest"]
   },
-  "include": ["src/**/*.ts", "test/**/*.ts"]
+  "include": ["src/**/*.ts", "test/**/*.ts", "types/**/*.ts"]
 }
