--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/jest": "^29.2.1",
     "@types/node": "^18.11.9",
     "@types/npm-package-arg": "^6.1.1",
+    "@types/prompts": "^2.4.1",
     "@types/rimraf": "^3.0.2",
     "@types/shelljs": "^0.8.11",
     "@types/text-table": "^0.2.2",
@@ -142,6 +143,7 @@
     "decompress": "^4.2.1",
     "fs-extra": "^10.1.0",
     "npm-package-arg": "^10.0.0",
+    "prompts": "^2.4.2",
     "rimraf": "^3.0.2",
     "shelljs": "^0.8.5",
     "text-table": "^0.2.0"
