--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
     "lint-staged": "^13.0.3",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3",
+    "types-pkg-json": "^1.2.1",
+    "types-tsconfig": "^1.2.1",
     "typescript": "^4.8.4"
   },
   "scripts": {
