--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/decompress": "^4.2.4",
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.1",
+    "@types/lodash": "^4.14.188",
     "@types/node": "^18.11.9",
     "@types/npm-package-arg": "^6.1.1",
     "@types/prompts": "^2.4.1",
@@ -144,6 +145,7 @@
     "commander": "^9.4.1",
     "decompress": "^4.2.1",
     "fs-extra": "^10.1.0",
+    "lodash": "^4.17.21",
     "npm-package-arg": "^10.0.0",
     "prompts": "^2.4.2",
     "rimraf": "^3.0.2",
