--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "genrate",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "Create and build modern web applications with zero initial configuration",
   "engines": {
-    "node": ">=14.0.0"
+    "node": ">=16.0.0"
+  },
+  "bin": {
+    "gen": "./dist/index.js"
   },
   "repository": {
     "type": "git",
